# GazaShell

./: CMakeLists.txt  GazaShell.cpp  README.md  grammer.md  main.c
src/: CMakeLists.txt  builtin.c  command.c  conditional_cmd.c  list.c  list.h  parser.c  path.c  pipe.c  scanner.c  symbols.c
src/include/: builtin.h  command.h  conditional_cmd.h  list.h  parser.h  path.h  pipe.h  scanner.h  symbols.h
